[package]
name = "splot"
version = "0.1.0"
authors = ["Douglas Lau <doug.p.lau@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Plot data with SVG"
keywords = ["chart", "graph", "plot", "visualization"]
categories = ["science", "visualization"]
repository = "https://github.com/DougLau/splot"
readme = "README.md"
