[package]
name = "splot"
version = "0.6.0"
license = "MIT OR Apache-2.0"
description = "Plot data to HTML"
keywords = ["chart", "graph", "plot", "visualization"]
categories = ["science", "visualization"]
repository = "https://github.com/DougLau/splot"
readme = "README.md"
edition = "2024"

[dependencies]
hatmil = "0.9"
